--- a/04_Transfer_Learning_P2_finetune.ipynb
+++ b/04_Transfer_Learning_P2_finetune.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNxOxX/akuhklTvBs5Ac8ii",
+      "authorship_tag": "ABX9TyNYNSW24KV1XD7ZAUqJ7WG6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,14 +46,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ej15T3eWpbA_",
-        "outputId": "982d76c1-7357-46a8-9aea-91619d4fc2a1"
+        "outputId": "06e7aadc-98f6-461f-b614-eb5b545c49b8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-10-31 02:59:39--  https://raw.githubusercontent.com/itspopoy57/Machinelearning/main/extras/helper_func.py\n",
+            "--2023-10-31 14:15:59--  https://raw.githubusercontent.com/itspopoy57/Machinelearning/main/extras/helper_func.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -63,7 +62,7 @@
             "\n",
             "\rhelper_func.py        0%[                    ]       0  --.-KB/s               \rhelper_func.py      100%[===================>]  10.01K  --.-KB/s    in 0s      \n",
             "\n",
-            "2023-10-31 02:59:39 (90.3 MB/s) - ‘helper_func.py’ saved [10246/10246]\n",
+            "2023-10-31 14:15:59 (97.9 MB/s) - ‘helper_func.py’ saved [10246/10246]\n",
             "\n"
           ]
         }
@@ -95,24 +94,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KizqQ0-9rMMl",
-        "outputId": "cec86988-1828-4e46-9227-fe7ca148cdd0"
+        "outputId": "74328865-770e-4186-b104-baffff8b9084"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-10-31 03:03:50--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.20.207, 74.125.197.207, 74.125.135.207, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.20.207|:443... connected.\n",
+            "--2023-10-31 14:16:05--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.69.207, 108.177.126.207, 108.177.127.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.69.207|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 168546183 (161M) [application/zip]\n",
             "Saving to: ‘10_food_classes_10_percent.zip’\n",
             "\n",
-            "10_food_classes_10_ 100%[===================>] 160.74M   258MB/s    in 0.6s    \n",
+            "10_food_classes_10_ 100%[===================>] 160.74M  41.1MB/s    in 4.5s    \n",
             "\n",
-            "2023-10-31 03:03:51 (258 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
+            "2023-10-31 14:16:10 (35.7 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
             "\n"
           ]
         }
@@ -127,7 +126,7 @@
       "metadata": {
         "id": "RdEMwDngrMJ5"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -144,19 +143,108 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "walk_through_dir(\"10_food_classes_10_percent\")"
+      ],
       "metadata": {
-        "id": "W-mHHXVwrMG_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W-mHHXVwrMG_",
+        "outputId": "1a9f5639-56b6-43ef-c8f5-ea567b1dadc4"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 2 directories and 0 images in '10_food_classes_10_percent'.\n",
+            "There are 10 directories and 0 images in '10_food_classes_10_percent/test'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/sushi'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ice_cream'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.\n",
+            "There are 10 directories and 0 images in '10_food_classes_10_percent/train'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###before we are using from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "\n",
+        "\n",
+        "now we are using tf.data.Dataset\n",
+        "which is faster but like imagedatagenerator is still the original and this is just new and improve version\n"
+      ],
+      "metadata": {
+        "id": "StR3T-0Bp8kT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dir = \"10_food_classes_10_percent/train\"\n",
+        "test_dir = \"10_food_classes_10_percent/test\"\n"
+      ],
+      "metadata": {
+        "id": "OslWOtqJTpkB"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "IMAGE_SIZE = (224, 224)\n",
+        "BATCH_SIZE = 32\n",
+        "train_data_10_percent = tf.keras.preprocessing.image_dataset_from_directory(directory=train_dir,\n",
+        "                                                                            image_size=IMG_SIZE,\n",
+        "                                                                            label_mode=\"categorical\",\n",
+        "                                                                            batch_size=32)"
+      ],
+      "metadata": {
+        "id": "_QzlQuIKTpdR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "StR3T-0Bp8kT"
-      }
+        "id": "XtEWYwDeTpar"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XNADrdXwTpXu"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
